tests/ui/async-await/higher-ranked-auto-trait-12.no_assumptions.stderr
error: implementation of `Robot` is not general enough
  --> $DIR/higher-ranked-auto-trait-12.rs:31:20
   |
LL |       let _my_task = this_is_send(async move {
   |  ____________________^
LL | |         let _my_iter = IRobot {
LL | |             id: 32,
LL | |             robot: source,
LL | |         };
LL | |         yield_now().await;
LL | |     });
   | |______^ implementation of `Robot` is not general enough
   |
   = note: `Box<(dyn Robot<Id = u32> + Send + '0)>` must implement `Robot`, for any lifetime `'0`...
   = note: ...but `Robot` is actually implemented for the type `Box<(dyn Robot<Id = u32> + Send + 'static)>`

error: aborting due to 1 previous error

